--- a/MpathY/Content/App_LocalResources/Lang/Global.th.resx
+++ b/MpathY/Content/App_LocalResources/Lang/Global.th.resx
@@ -465,4 +465,28 @@
   <data name="Select_Topic_Slogan" xml:space="preserve">
     <value>شما می توانید هر یک از موضوعات زیر را برای گفتگو را انتخاب کنید!</value>
   </data>
+  <data name="Button_Find_Location" xml:space="preserve">
+    <value>پیدا کردن مکان خود</value>
+  </data>
+  <data name="Indonesian" xml:space="preserve">
+    <value>မြန်မာ</value>
+  </data>
+  <data name="No_Email" xml:space="preserve">
+    <value>با عرض پوزش، ایمیل در دسترس نیست</value>
+  </data>
+  <data name="The_Team" xml:space="preserve">
+    <value>تیم</value>
+  </data>
+  <data name="The_Team_Database" xml:space="preserve">
+    <value>متخصص پایگاه داده</value>
+  </data>
+  <data name="The_Team_Designer" xml:space="preserve">
+    <value>طراح رابط</value>
+  </data>
+  <data name="The_Team_Manager" xml:space="preserve">
+    <value>مدیر پروژه</value>
+  </data>
+  <data name="The_Team_Programmer" xml:space="preserve">
+    <value>برنامه نویس</value>
+  </data>
 </root>
